examples/test/testpolicy3564.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3564
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key15: value42
      key10: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value10
          key15: value24
          key35: value14
      podSelector:
        matchLabels:
          key24: value45
          key36: value22
          key44: value1
